// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextButtonField should render checkbox item 1`] = `
<Field
  blank={Object {}}
  buttonAttrs={
    Object {
      "buttonAction": [Function],
      "buttonText": "Button",
    }
  }
  component={[Function]}
  disabled={false}
  fieldRequired={false}
  fieldSelector={[Function]}
  item={
    Object {
      "type": "checkbox",
    }
  }
  label="Checkbox"
  name="Checkbox field"
  tooltipHelp={null}
/>
`;

exports[`TextButtonField should render select item with custom blank opt 1`] = `
<Field
  blank={
    Object {
      "label": "Bare Metal",
      "value": "bareMetal",
    }
  }
  buttonAttrs={
    Object {
      "buttonAction": [Function],
      "buttonText": "Button",
    }
  }
  component={[Function]}
  disabled={false}
  fieldRequired={false}
  fieldSelector={[Function]}
  item={
    Object {
      "selection": Array [
        Object {
          "label": "A",
          "value": "a",
        },
        Object {
          "label": "B",
          "value": "b",
        },
        Object {
          "label": "C",
          "value": "c",
        },
      ],
      "type": "select",
    }
  }
  label="Select"
  name="select field"
  tooltipHelp={null}
/>
`;

exports[`TextButtonField should render text field without field selector 1`] = `
<Field
  blank={Object {}}
  buttonAttrs={
    Object {
      "buttonAction": [Function],
      "buttonText": "Button",
    }
  }
  component={[Function]}
  disabled={false}
  fieldRequired={false}
  fieldSelector={[Function]}
  item={Object {}}
  label="Text field"
  name="no selector"
  tooltipHelp={null}
/>
`;

exports[`TextButtonField should render text item 1`] = `
<Field
  blank={Object {}}
  buttonAttrs={
    Object {
      "buttonAction": [Function],
      "buttonText": "Button",
    }
  }
  component={[Function]}
  disabled={false}
  fieldRequired={false}
  fieldSelector={[Function]}
  item={
    Object {
      "type": "text",
    }
  }
  label="Text"
  name="Text field"
  tooltipHelp={null}
/>
`;
